src/objects/Apttus_Approval__Approval_Process__c.object
<CustomObject>
    <description>Designates an approval process defined in the system</description>
    <fields>
        <fullName>Apttus_Approval__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ApprovalSummaryPage__c</fullName>
        <description>Specifies the name of a custom page used to show approval summary information.  Leave it blank to use the default page.</description>
        <inlineHelpText>Specifies the name of a custom page used to show approval summary information.  Leave it blank to use the default page.</inlineHelpText>
        <label>Approval Summary Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Assignment_Email_Template__c</fullName>
        <description>The name of the Email Template used to send notifications when an approval request is submitted.</description>
        <label>Assignment Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__BackupAdminUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field allows you to specify a backup admin approver at the process level instead of the default system wide level that is assigned to requests that have an invalid or deactivated approver.</description>
        <inlineHelpText>This field allows you to specify a backup admin approver at the process level instead of the default system wide level that is assigned to requests that have an invalid or deactivated approver.</inlineHelpText>
        <label>Backup Admin User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__CancelPendingRequestsOnAReject__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Cancel all pending request on a single reject. This is deprecated and no longer used.</description>
        <inlineHelpText>Cancel all pending request on a single reject. This is deprecated and no longer used..</inlineHelpText>
        <label>Cancel Pending Requests (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Cancellation_Email_Template__c</fullName>
        <description>The name of the Email Template used to send notifications when an approval request is cancelled.</description>
        <label>Cancellation Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ChildObjectType__c</fullName>
        <description>The child object type. Only applicable to a child process step.</description>
        <inlineHelpText>The child object type. Only applicable to a child process step.</inlineHelpText>
        <label>Child Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ConsolidateApprovals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether multiple approvals should be consolidated into a single approval. This takes effect only when consolidated notifications is also checked.</description>
        <inlineHelpText>Consolidate multiple approvals into a single approval. This takes effect only when consolidated notifications is also checked.</inlineHelpText>
        <label>Consolidate Approvals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ConsolidateNotifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether multiple approval notifications for an approver should be consolidated into a single notification.</description>
        <inlineHelpText>Consolidate multiple approval notifications for an approver into a single notification</inlineHelpText>
        <label>Consolidate Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ContextType__c</fullName>
        <description>The type of context associated with the process</description>
        <inlineHelpText>The type of context associated with the process</inlineHelpText>
        <label>Context Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                    <default>true</default>
                    <label>Single</label>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ContinuePendingApprovalsOnAReject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Continue with approval process even when a step is rejected.</description>
        <inlineHelpText>Continue with approval process even when a step is rejected.</inlineHelpText>
        <label>Continue Pending Approvals on a Reject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__CriteriaFieldNames__c</fullName>
        <description>The list of field names used in the criteria</description>
        <inlineHelpText>The list of field names used in the criteria</inlineHelpText>
        <label>Criteria Field Names</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__CustomMyApprovalsPage__c</fullName>
        <description>Specifies the name of a custom page used to show My Approvals information.  Leave it blank to use the default page.</description>
        <inlineHelpText>Specifies the name of a custom page used to show My Approvals information.  Leave it blank to use the default page.</inlineHelpText>
        <label>Custom My Approvals Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__CustomPreviewPage__c</fullName>
        <description>Specifies the name of a custom page used to show preview information.  Leave it blank to use the default page.</description>
        <inlineHelpText>Specifies the name of a custom page used to show preview information.  Leave it blank to use the default page.</inlineHelpText>
        <label>Custom Preview Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__DependsOn__c</fullName>
        <description>List of steps which must be completed before this step.</description>
        <label>Depends On</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Description__c</fullName>
        <description>Denotes a description for the particular approval process record type being used (i.e. initial action description, final submission action, etc)</description>
        <inlineHelpText>Denotes a description for the particular approval process record type being used (i.e. initial action description, final submission action, etc)</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__EntryCriteriaFilterLogic__c</fullName>
        <description>The entry criteria filter logic expression</description>
        <inlineHelpText>Enter any combination of AND, OR, parenthesis, and numbers representing the expressions. These are the only values that can be used. Using other values may cause unexpected behavior.</inlineHelpText>
        <label>Entry Criteria Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Entry_Criteria_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Entry Criteria Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Entry_Criteria_BoolOper__c</fullName>
        <description>The entry criteria boolean operator</description>
        <label>Entry Criteria Boolean Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                    <default>true</default>
                    <label>AND</label>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Entry_Criteria_Comparison_Type__c</fullName>
        <label>Entry Criteria Comparison Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal to</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less than or equal to</fullName>
                </value>
                <value>
                    <fullName>greater than or equal to</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Entry_Criteria_Field_Value__c</fullName>
        <label>Entry Criteria Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Entry_Criteria_Field__c</fullName>
        <label>Entry Criteria Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Entry_Criteria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entry Criteria</label>
        <referenceTo>Apttus_Approval__Approval_Process__c</referenceTo>
        <relationshipLabel>Entry Criteria</relationshipLabel>
        <relationshipName>Entry_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Escalation_Email_Template__c</fullName>
        <description>The name of the Email Template used to send notifications when an approval request is escalated.</description>
        <inlineHelpText>The name of the Email Template used to send notifications when an approval request is escalated.</inlineHelpText>
        <label>Escalation Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Final_Action_Field_Name_Source__c</fullName>
        <label>Final Action Field Name Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                    <default>true</default>
                    <label>Self</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Final_Action_Field_Name__c</fullName>
        <label>Final Action Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Final_Action_Field_Update_Type__c</fullName>
        <label>Final Action Field Update Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field Update</fullName>
                    <default>true</default>
                    <label>Field Update</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Final_Action_Field_Value__c</fullName>
        <label>Final Action Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Final_Action_Type__c</fullName>
        <label>Final Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Final_Approval_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Final Approval Action</label>
        <referenceTo>Apttus_Approval__Approval_Process__c</referenceTo>
        <relationshipLabel>Final Approval Actions</relationshipLabel>
        <relationshipName>Final_Approval_Action</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Group_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Action</label>
        <referenceTo>Apttus_Approval__Approval_Process__c</referenceTo>
        <relationshipLabel>Group Actions</relationshipLabel>
        <relationshipName>Group_Action</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Initial_Submission_Action_Type__c</fullName>
        <label>Initial Submission Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field Update (Constant)</fullName>
                </value>
                <value>
                    <fullName>Field Update (Value)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Initial_Submission_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Submission Action</label>
        <referenceTo>Apttus_Approval__Approval_Process__c</referenceTo>
        <relationshipLabel>Initial Submission Actions</relationshipLabel>
        <relationshipName>Initial_Submission_Action</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Initial_Submission_Field_Name_Source__c</fullName>
        <label>Initial Submission Field Name Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                    <default>true</default>
                    <label>Self</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Initial_Submission_Field_Name__c</fullName>
        <label>Initial Submission Field Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Initial_Submission_Field_Value__c</fullName>
        <label>Initial Submission Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__NotifyOnly_Email_Template__c</fullName>
        <description>The name of the Email Template used to send notifications when a notify only process step is executed.</description>
        <label>NotifyOnly Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Object_Label__c</fullName>
        <label>Object Label</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                    <default>true</default>
                    <label>Agreement</label>
                </value>
                <value>
                    <fullName>Agreement Line Item</fullName>
                </value>
                <value>
                    <fullName>Agreement Term Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Object_Type__c</fullName>
        <description>This field represents the business context object for which this approval process applies</description>
        <inlineHelpText>This field represents the business context object for which this approval process applies</inlineHelpText>
        <label>Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Apttus__APTS_Agreement__c</fullName>
                    <default>true</default>
                    <label>Apttus__APTS_Agreement__c</label>
                </value>
                <value>
                    <fullName>Apttus__AgreementLineItem__c</fullName>
                </value>
                <value>
                    <fullName>Apttus__Agreement_Term_Exception__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ProcessAutoEscalate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to true if all steps in this process should be auto-escalated by the system if it not approved, rejected, or reassigned by the expected completion date.</description>
        <inlineHelpText>This field is set to true if all steps in this process should be auto-escalated by the system if it not approved, rejected, or reassigned by the expected completion date.</inlineHelpText>
        <label>Process Auto Escalate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ProcessEscalateToId__c</fullName>
        <description>The id of the assignee the request will be escalated to if it is escalated at the process level.</description>
        <inlineHelpText>The id of the assignee the request will be escalated to if it is escalated at the process level.</inlineHelpText>
        <label>Process Escalate To Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ProcessEscalateToName__c</fullName>
        <description>The name of the assignee the request will be escalated to if it is escalated at the process level.</description>
        <inlineHelpText>The name of the assignee the request will be escalated to if it is escalated at the process level.</inlineHelpText>
        <label>Process Escalate To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ProcessEscalateToType__c</fullName>
        <description>The type of assignee the request will be escalated to if it is escalated at the process level.</description>
        <inlineHelpText>The type of assignee the request will be escalated to if it is escalated at the process level.</inlineHelpText>
        <label>Process Escalate To Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Backup Admin User</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Related User</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>Rule</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>User Approval Matrix Next Approver</fullName>
                </value>
                <value>
                    <fullName>User Delegated Approver</fullName>
                </value>
                <value>
                    <fullName>User Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ProcessExpectedDaysToComplete__c</fullName>
        <description>The number of expected days that each approval step for this process needs to be completed in (approved or rejected) before a request is automatically escalated.</description>
        <inlineHelpText>The number of expected days that each approval step for this process needs to be completed in (approved or rejected) before a request is automatically escalated.</inlineHelpText>
        <label>Process Expected Days To Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ProcessExpectedHoursToComplete__c</fullName>
        <description>The number of expected hours that each approval step for this process needs to be completed in (approved or rejected) before a request is automatically escalated.</description>
        <inlineHelpText>The number of expected hours that each approval step for this process needs to be completed in (approved or rejected) before a request is automatically escalated.</inlineHelpText>
        <label>Process Expected Hours To Complete</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ProcessExpectedMinutesToComplete__c</fullName>
        <description>The number of expected minutes that each approval step for this process needs to be completed in (approved or rejected) before a request is automatically escalated.</description>
        <inlineHelpText>The number of expected minutes that each approval step for this process needs to be completed in (approved or rejected) before a request is automatically escalated.</inlineHelpText>
        <label>Process Expected Minutes To Complete</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Process_Name__c</fullName>
        <label>Process Name</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Reassignment_Email_Template__c</fullName>
        <description>The name of the Email Template used to send notifications when an approval request is reassigned.</description>
        <label>Reassignment Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Send_Email__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Sequence__c</fullName>
        <description>The process evaluation sequence</description>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepAutoEscalate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to true if this step should be auto-escalated by the system if it not approved, rejected, or reassigned by the expected completion date.</description>
        <inlineHelpText>This field is set to true if this step should be auto-escalated by the system if it not approved, rejected, or reassigned by the expected completion date.</inlineHelpText>
        <label>Step Auto Escalate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepAutoReapprovalCriteria__c</fullName>
        <description>The auto re-approval criteria for the step</description>
        <inlineHelpText>The auto re-approval criteria for the step</inlineHelpText>
        <label>Step Auto Reapproval Criteria</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepAutoReapprove__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether auto re-approval is enabled for the step. This indicator is maintained by the system.</description>
        <inlineHelpText>Indicates whether auto re-approval is enabled for the step. This indicator is maintained by the system.</inlineHelpText>
        <label>Step Auto Reapprove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepDisplayFieldNameHeader__c</fullName>
        <description>The API name of the header field to display for the step</description>
        <inlineHelpText>The API name of the header field to display for the step</inlineHelpText>
        <label>Step Display Field Name Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepDisplayFieldNames__c</fullName>
        <description>The API names of the fields to display for the step</description>
        <inlineHelpText>The API names of the fields to display for the step</inlineHelpText>
        <label>Step Display Field Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepEscalateToId__c</fullName>
        <description>The id of the assignee the request will be escalated to if it is escalated at the step level.</description>
        <inlineHelpText>The id of the assignee the request will be escalated to if it is escalated at the step level.</inlineHelpText>
        <label>Step Escalate To Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepEscalateToName__c</fullName>
        <description>The name of the assignee the request will be escalated to if it is escalated at the step level.</description>
        <inlineHelpText>The name of the assignee the request will be escalated to if it is escalated at the step level.</inlineHelpText>
        <label>Step Escalate To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepEscalateToType__c</fullName>
        <description>The type of assignee the request will be escalated to if it is escalated at the step level.</description>
        <inlineHelpText>The type of assignee the request will be escalated to if it is escalated at the step level.</inlineHelpText>
        <label>Step Escalate To Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Backup Admin User</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Related User</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>Rule</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>User Approval Matrix Next Approver</fullName>
                </value>
                <value>
                    <fullName>User Delegated Approver</fullName>
                </value>
                <value>
                    <fullName>User Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepExpectedDaysToComplete__c</fullName>
        <description>The number of expected days that this approval step needs to be completed in (approved or rejected) before a request is automatically escalated.</description>
        <inlineHelpText>The number of expected days that this approval step needs to be completed in (approved or rejected) before a request is automatically escalated.</inlineHelpText>
        <label>Step Expected Days To Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepExpectedHoursToComplete__c</fullName>
        <description>The number of expected hours that this approval step needs to be completed in (approved or rejected) before a request is automatically escalated.</description>
        <inlineHelpText>The number of expected hours that this approval step needs to be completed in (approved or rejected) before a request is automatically escalated.</inlineHelpText>
        <label>Step Expected Hours To Complete</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepExpectedMinutesToComplete__c</fullName>
        <description>The number of expected minutes that this approval step needs to be completed in (approved or rejected).</description>
        <inlineHelpText>The number of expected minutes that this approval step needs to be completed in (approved or rejected).</inlineHelpText>
        <label>Step Expected Minutes To Complete</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepFilterConditionDescription__c</fullName>
        <description>Enter a description for this step filter condition</description>
        <inlineHelpText>Enter a description for this step filter condition</inlineHelpText>
        <label>Step Filter Condition Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepFilterLogic__c</fullName>
        <description>The step criteria filter logic expression</description>
        <label>Step Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepKeyFieldNames__c</fullName>
        <description>The API names of the fields which comprise the key for the child object.</description>
        <inlineHelpText>The API names of the fields which comprise the key for the child object.</inlineHelpText>
        <label>Step Key Field Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepLabel__c</fullName>
        <description>The step label</description>
        <inlineHelpText>Enter the name of a custom label containing text that will be used as the label for the step</inlineHelpText>
        <label>Step Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepSequence__c</fullName>
        <description>The step execution sequence</description>
        <label>Step Sequence</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepSubmissionComment1Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this to enable submission comment 1 for this step. When enabled, the user will be prompted to enter submission comment 1 using the submission comment 1 label when the request is submitted for approval.</description>
        <inlineHelpText>Select this to enable submission comment 1 for this step. When enabled, the user will be prompted to enter submission comment 1 using the submission comment 1 label when the request is submitted for approval.</inlineHelpText>
        <label>Step Submission Comment 1 Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepSubmissionComment2Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this to enable submission comment 2 for this step. When enabled, the user will be prompted to enter submission comment 2 using the submission comment 2 label when the request is submitted for approval.</description>
        <inlineHelpText>Select this to enable submission comment 2 for this step. When enabled, the user will be prompted to enter submission comment 2 using the submission comment 2 label when the request is submitted for approval.</inlineHelpText>
        <label>Step Submission Comment 2 Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepSubmissionComment3Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this to enable submission comment 3 for this step. When enabled, the user will be prompted to enter submission comment 3 using the submission comment 3 label when the request is submitted for approval.</description>
        <inlineHelpText>Select this to enable submission comment 3 for this step. When enabled, the user will be prompted to enter submission comment 3 using the submission comment 3 label when the request is submitted for approval.</inlineHelpText>
        <label>Step Submission Comment 3 Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__StepSubmissionCommentsEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this to enable submission comments at step level. When enabled at step level, the user will be prompted to enter one or more comments for this step when the request is submitted for approval.</description>
        <inlineHelpText>Select this to enable submission comments at step level. When enabled at step level, the user will be prompted to enter one or more comments for this step when the request is submitted for approval.</inlineHelpText>
        <label>Step Submission Comments Enabled</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>